# geglFilterExamples

./: .gitignore  readme.md  vagga.yaml
myGeglFilters/: meson.build
myGeglFilters/areaOp/: my-area-filter.c
myGeglFilters/canny/: meson.build
myGeglFilters/canny/cannyOp/: canny-op.c
myGeglFilters/canny/doubleThresholdOp/: double-threshold-op.c  meson.build
myGeglFilters/canny/hysteresisOp/: hysteresis-op.c  hysteresis.c  hysteresis.h  meson.build
myGeglFilters/canny/nonMaxGradientSuppressOp/: meson.build  non-max-gradient-suppress-op.c  non-max-gradient-suppress.c
myGeglFilters/canny/nonMaxSuppressionOp/: non-max-suppression-op.c  non-max-suppression.c
myGeglFilters/cannyOp/: canny-op.c  meson.build
myGeglFilters/examples/: meson.build
myGeglFilters/examples/areaOp/: meson.build  my-area-filter.c
myGeglFilters/examples/graphOp/: meson.build  my-graph-op.c
myGeglFilters/examples/pointOp/: my-point-filter.c
myGeglFilters/graphOp/: my-graph-op.c
myGeglFilters/hacked/: edge-sobel.c  image-gradient.c  meson.build  readme.md
myGeglFilters/metaOp/: meson.build
myGeglFilters/nonMaxSuppressionOp/: meson.build  non-max-suppression-op.c  non-max-suppression.h
myGeglFilters/pointOp/: meson.build  my-point-filter.c
myGeglFilters/visualization/: meson.build  readme.md
myGeglFilters/visualization/falseColorGradientOp/: false-color-gradient-filter.c  meson.build
myGeglFilters/visualization/falseColorOp/: false-color-filter.c  meson.build
