shared_library('non-max-gradient-suppress-filter',
               ['non-max-gradient-suppress-op.c', 'non-max-gradient-suppress.c', ],
               dependencies : [geglDependency],
               name_prefix : '',
               install: true,
               install_dir: userInstallPath,
               )